Error Fix - Layout Bug Screen to overflowing

--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -1,7 +1,7 @@
 .home {
   &__container {
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
     background-image: linear-gradient(
       to right, 
       rgba($color-primary, 0.9), 
