--- a/src/sass/pages/about/_about.scss
+++ b/src/sass/pages/about/_about.scss
@@ -1,7 +1,7 @@
 .about {
   &__container {
     height: auto;
-    width: 100vw;
+    width: 100%;
 
     display: grid;
     grid-template-columns: 1fr;
