--- a/src/sass/pages/about/header/_header.scss
+++ b/src/sass/pages/about/header/_header.scss
@@ -1,7 +1,7 @@
 .about {
   &__header {
     height: 100vh;
-    width: 100vw;
+    width: 100%;
 
     display: grid;
     grid-template-columns: repeat(2, minmax(min-content, 1fr));
