--- a/src/sass/pages/about/steps/_steps.scss
+++ b/src/sass/pages/about/steps/_steps.scss
@@ -1,5 +1,7 @@
 .about-steps {
   &__container {
+    width: 100%;
+
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
     background-color: $color-white;
