--- a/src/sass/pages/contact/_contact.scss
+++ b/src/sass/pages/contact/_contact.scss
@@ -2,7 +2,7 @@
 	&__container {
 		min-height: 100vh;
 		height: auto;
-		width: 100vw;
+		width: 100%;
 
 		display: grid;
 		grid-template-columns: repeat(2, 1fr);
