--- a/src/sass/pages/portfolio/_portfolio.scss
+++ b/src/sass/pages/portfolio/_portfolio.scss
@@ -2,7 +2,7 @@
   &__container {
     min-height: 100vh;
     height: auto;
-    width: 100vw;
+    width: 100%;
 
     display: grid;
     grid-template-columns: 1fr;
