--- a/src/sass/pages/portfolio/overall/_overall.scss
+++ b/src/sass/pages/portfolio/overall/_overall.scss
@@ -2,7 +2,7 @@
   &__container {
     min-height: 100vh;
     height: auto;
-    width: 100vw;
+    width: 100%;
 
     padding: 7rem 2rem;
     background-color: $color-primary;
